--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.0.7",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
